2005-08-17  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by rjw
        
        Addresses <rdar://problem/4192534> new frame load delegate SPI needed for Dashboard
            Added handledOnloadEvents delegate method (private for now)

        * WebCoreSupport.subproj/WebBridge.m:
        (-[WebBridge handledOnloadEvents]):
        * WebView.subproj/WebDefaultFrameLoadDelegate.m:
        (-[WebDefaultFrameLoadDelegate webView:didHandleOnloadEventsForFrame:]):
        * WebView.subproj/WebFrame.m:
        (-[WebFrame _handledOnloadEvents]):
        * WebView.subproj/WebFramePrivate.h:
        * WebView.subproj/WebViewPrivate.h:

2005-08-17  John Sullivan  <sullivan@apple.com>

        Reviewed by Geoff Garen.
        
        - fixed <rdar://problem/4219817> Particular icon database + bookmarks + history crashes Safari on launch

        * Misc.subproj/WebIconDatabase.m:
        (-[WebIconDatabase releaseIconForURL:]):
        Move line that might remove last reference to iconURL to the end of the block.

2005-08-16  Darin Adler  <darin@apple.com>

        Reviewed by Trey.

	- improved fix for <rdar://problem/4211631>, tiled images tiled incorrectly when printing or 
	  drawing offscreen

        * WebCoreSupport.subproj/WebImageData.m: (-[WebImageData tileInRect:fromPoint:context:]):
        Fix pattern phase origin to use the image tile origin, which is clearly right, rather than
        the image rectangle, which isn't right, but often is the same.

2005-08-16  Adele Peterson  <adele@apple.com>

        Reviewed by John.

        - fixed <rdar://problem/4210320> URL tooltips should display a URL for elements that submit forms

        When the setShowsURLsInToolTips preference is set, we will display a tooltip containing 
        the form's url when you mouse over a submit button.

        * WebView.subproj/WebHTMLView.m: (-[WebHTMLView _updateMouseoverWithEvent:]):

2005-08-16  Darin Adler  <darin@apple.com>

        Reviewed by Beth Dakin.
