@@ -1,3 +1,14 @@
+2005-08-17  Maciej Stachowiak  <mjs@apple.com>
+
+        Reviewed by Darin.
+
+	- fix mysterious CGImageSource error message and possibly crash on layout tests.
+
+        * WebView.subproj/WebMainResourceLoader.m:
+        (-[WebMainResourceLoader receivedError:]): Retain the data source since it may
+	prematurely self-destruct otherwise.
+        (-[WebMainResourceLoader cancelWithError:]): ditto
+
 2005-08-17  Justin Garcia  <justin.garcia@apple.com>
 
         Reviewed by rjw
